# Fast125-RMUA

./: README.md
Guide/: rmua2026_setup_guide.html
Materials/RM_Fly/: .gitignore  README.md  circle.sh  planner.sh  rviz.sh  vio_bag.sh
Materials/RM_Fly-stage_2/: fly.py  keyfly.sh  manfly.sh  planner.sh  record_rgbd.sh
Materials/RM_Fly-stage_2/src/VINS-Mono-master/camera_model/: CMakeLists.txt
Materials/RM_Fly-stage_2/src/circle_detector/: package.xml
Materials/RM_Fly-stage_2/src/circle_detector/src/: circle_odom_bak.cpp
Materials/RM_Fly-stage_2/src/min_snap/: package.xml
Materials/RM_Fly-stage_2/src/min_snap/launch/: min_snap.launch
Materials/RM_Fly/src/Control/Mpc/rpg_mpc/: package.xml
Materials/RM_Fly/src/Control/Mpc/rpg_mpc/include/rpg_mpc/: mpc_controller.h  mpc_input.h
Materials/RM_Fly/src/Control/Mpc/rpg_mpc/model/: Makefile  quadrotor_model_codegen
Materials/RM_Fly/src/Control/Mpc/rpg_mpc/src/: mpc_fsm copy.cpp
Materials/RM_Fly/src/circle_detector/: CMakeLists.txt
Materials/RM_Fly/src/dyn_obs_detect/: CMakeLists.txt
RM_Fly-stage_2/: README.md  destroy.py  record_stero.sh
RM_Fly-stage_2/info/: dynamic_obs
RM_Fly-stage_2/src/Control/Ctrl/: CMakeLists.txt  package.xml
RM_Fly-stage_2/src/VINS-Mono-master/vins_estimator/: CMakeLists.txt
RM_Fly-stage_2/src/circle_detector/: CMakeLists.txt
RM_Fly-stage_2/src/circle_detector/config/: config.yaml
RM_Fly-stage_2/src/circle_detector/launch/: circle_odom.launch  default.rviz
RM_Fly-stage_2/src/circle_detector/msg/: detect_circle.msg  rotation_circle.msg  transition_circle.msg
RM_Fly-stage_2/src/circle_detector/src/: bak.cpp  circle_odom.cpp
RM_Fly-stage_2/src/dyn_obs_detect/: package.xml
RM_Fly-stage_2/src/dyn_obs_detect/src/: dyn_obs_detect.cpp  get_dyn_obs_example.cpp
RM_Fly-stage_2/src/min_snap/: CMakeLists.txt
RM_Fly-stage_2/src/min_snap/launch/: throw_fly.launch
RM_Fly-stage_2/src/min_snap/misc/: 2022-08-24-14-55-57.bag
RM_Fly-stage_2/src/min_snap/src/: min_snap_closeform.cpp  min_snap_generator.cpp  throw_fly_node.cpp
RM_Fly-stage_2/src/plan_manage/: CMakeLists.txt
RM_Fly-stage_2/src/plan_manage/config/: gate.yaml  planner_params.yaml
RM_Fly-stage_2/src/plan_manage/include/minco/: minco_time_uniform.hpp
RM_Fly-stage_2/src/plan_manage/include/misc/: stage_2_moving_obs.hpp
RM_Fly-stage_2/src/plan_manage/include/plan_manage/: plan_manage.h
RM_Fly-stage_2/src/plan_manage/include/traj_opt/: config.hpp  global_traj_opt_replan.h
RM_Fly-stage_2/src/plan_manage/include/trajectory_utils/: poly_traj_utils.hpp  root_finder.hpp
RM_Fly-stage_2/src/plan_manage/launch/: plan_manage.launch  rviz.launch
RM_Fly-stage_2/src/plan_manage/misc/: gate copy.yaml  urbancity_params.yaml
RM_Fly-stage_2/src/plan_manage/src/: debug.cpp  debug.txt  global_traj_opt.cc  plan_manage.cpp  rm_traj_opt_uniform.cc
RM_Fly-stage_2/src/utils/airsim_ros_pkgs/: CMakeLists.txt
RM_Fly-stage_2/src/utils/keyboard_control/: CMakeLists.txt  package.xml
RM_Fly-stage_2/src/utils/quadrotor_msgs/: CMakeLists.txt
RM_Fly-stage_2/src/utils/state_transform/: CMakeLists.txt  package.xml
RM_Fly-stage_2/src/utils/state_transform/launch/: state_transform.launch
RM_Fly-stage_2/src/utils/state_transform/src/: state_transform.cpp
(+287 files in other folders)
